<resources>
  <string name="app_name">TargetCaseStudy</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>

  <string name="deal_list">Deal List</string>
  <string name="deal_item">Deal Item</string>
  <string name="ship">ship</string>
  <string name="or">or</string>
  <string name="reg">Reg: </string>
  <string name="add_to_list">add to list</string>
  <string name="add_to_cart">add to cart</string>
  <string name="no_deal_found">No Deal Found, Please refresh again</string>
  <string name="something_went_wrong_error">Something went Wrong, Please try again</string>
  <string name="no_internet_connection">No Internet Connection</string>
  <string name="internet_connection_error">No Internet Found, Please check and swipe to refresh to load data again</string>

  <!-- Credit card validation strings. You do not need to make changes here. -->
  <string name="credit_card_payment_title">Credit Card Payment</string>
  <string name="credit_card_payment_subtitle">Note: you do NOT need to enter real data</string>
  <string name="submit">Submit</string>
  <string name="cancel">Cancel</string>
  <string name="credit_card_number_hint">Credit card number</string>
</resources>
